[package]
name = "rust-my-claude"
version = "0.1.0"
edition = "2024"
description = "Claude Code status line — pure Rust, zero npm/node/jq dependencies"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
